syntax = "proto3";

import "google/protobuf/empty.proto";

package blocklog.grpc;

option go_package = "github.com/shifty11/blocklog-backend/grpc/project/projectpb";


service ProjectService {
  rpc ListProjects (google.protobuf.Empty) returns (ListProjectsResponse) {}
}

message Channel {
  int64 id = 1;
  string name = 2;
}

message Project {
  int64 id = 1;
  string name = 2;
  repeated Channel channels = 3;
}

message ListProjectsResponse {
  repeated Project projects = 1;
}
